styling the layout

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,37 @@
    ╚═╝   ╚══════╝╚══════╝   ╚═╝           ╚═╝
 */
 
+/*? ➞➞➞➞➞ Custom Properties ➞➞➞➞➞ */
+
+:root {
+  /**   -> Colors <-   */
+
+  --c-1: #042940;
+  --c-2: #005C53;
+  --c-3: #9FC131;
+  --c-4: #DBF227;
+  --c-5: #D6D58E;
+  
+  /**   -> gray colors <-   */
+  
+  --gray-1: #111;
+  --gray-2: #222;
+  --gray-3: #333;
+  --gray-4: #444;
+  --gray-5: #555;
+  --gray-6: #666;
+  --gray-7: #777;
+  --gray-8: #888;
+  --gray-9: #999;
+  --gray-10: #aaa;
+  
+  /**   -> Gradients <-   */
+
+  --gradient-1: linear-gradient(0deg, rgba(0,36,0,1) 0%, rgba(54,121,9,1) 50%, rgba(219,255,0,1) 100%);
+  --gradient-1-inv: linear-gradient(0deg, rgba(219,255,0,1) 0%, rgba(54,121,9,1) 50%, rgba(0,36,0,1) 100%);
+  --gradient-2: linear-gradient(0deg, rgba(0,36,0,1), rgba(54,121,9,1), rgba(219,255,0,1), rgba(54,121,9,1), rgba(0,36,0,1));
+}
+
 /*? ➞➞➞➞➞ Basic reset ➞➞➞➞➞ */
 
 /* (⌐■_■) This code will reset the basic styles of the web page, such as margins, padding and fonts, 
@@ -80,7 +111,7 @@ button:hover {
   background-color: #337ab5;
 }
 
-/*? ➞➞➞➞ Layout ➞➞➞➞➞ */
+/*? ➞➞➞➞➞ Layout ➞➞➞➞➞ */
 
 /*
 ┌────────────────────────────────────────────────────┐
@@ -97,6 +128,8 @@ button:hover {
 │                      footer                        │
 └────────────────────────────────────────────────────┘
 */
+
+/**   -> grid-container <-   */
 
 .gc {
   width: 100%;
@@ -130,6 +163,94 @@ button:hover {
 .footer {
   position: relative;
   overflow: hidden;
-  border: 1px solid rgb(200,200,200);
+  /* border: 1px solid var(--gray-1); */
 }
 
+/*? ➞➞➞➞➞ INT ➞➞➞➞➞ */
+
+.int {
+  position: absolute;
+  width: 40%;
+  height: 50%;
+  border: 1px solid var(--gray-5);
+}
+
+/*
+┌────────────────────────────────────────────────────┐
+!                      Header                        │
+└────────────────────────────────────────────────────┘
+*/
+
+.header {
+  background-image: var(--gradient-1);
+}
+
+/*
+┌────────────────────────────────────────────────────┐
+!                       Left                         │
+└────────────────────────────────────────────────────┘
+*/
+
+.left {
+  background-image: var(--gradient-2);
+}
+
+/*
+┌────────────────────────────────────────────────────┐
+!                       c-1                          │
+└────────────────────────────────────────────────────┘
+*/
+
+.c-1 {
+  background-image: var(--gradient-1-inv);
+}
+
+/*
+┌────────────────────────────────────────────────────┐
+!                       c-2                          │
+└────────────────────────────────────────────────────┘
+*/
+
+.c-2 {
+  background-image: var(--gradient-1-inv);
+}
+
+/*
+┌────────────────────────────────────────────────────┐
+!                       c-3                          │
+└────────────────────────────────────────────────────┘
+*/
+
+.c-3 {
+  background-image: var(--gradient-1);
+}
+
+/*
+┌────────────────────────────────────────────────────┐
+!                       c-4                          │
+└────────────────────────────────────────────────────┘
+*/
+
+.c-4 {
+  background-image: var(--gradient-1);
+}
+
+/*
+┌────────────────────────────────────────────────────┐
+!                      Right                         │
+└────────────────────────────────────────────────────┘
+*/
+
+.right {
+  background-image: var(--gradient-2);
+}
+
+/*
+┌────────────────────────────────────────────────────┐
+!                      Footer                        │
+└────────────────────────────────────────────────────┘
+*/
+
+.footer {
+  background-image: var(--gradient-1-inv);
+}
