--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,6 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
   color: #333;
-  margin-bottom: 10px;
 }
 
 p {
@@ -91,7 +90,6 @@ ul, ol {
 img {
   max-width: 100%;
   height: auto;
-  margin-bottom: 20px;
 }
 
 table {
@@ -190,6 +188,55 @@ button:hover {
 
 /*? d[-_-]b M1 */
 
+.menu1 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: var(--gradient-1-50);
+  padding: 0.5rem;
+  border-radius: 1.7rem;
+  border: 1px solid var(--c-4);
+}
+
+.menu1-cont {
+  width: 100%;
+  height: 100%;
+  background-image: var(--gradient-2);
+  padding: 0.3rem;
+  border-radius: 1.5rem;
+  border: 1px solid var(--c-7);
+}
+
+.menu1-links {
+  width: 100%;
+  height: 100%;
+  background-color: var(--c-7);
+  display: flex;
+  flex-direction: column;
+  padding: 0.3rem;
+  border-radius: 1.3rem;
+  border: 1px solid var(--c-7);
+}
+
+.menu1__link {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-grow: 1;
+  border: 1px solid var(--c-2);
+  background-color: var(--c-1);
+  transition: filter 500ms ease-in-out,
+  color 500ms ease-in-out;
+}
+
+.menu1__link:nth-child(1) {border-radius: 1rem 1rem 0 0;}
+.menu1__link:nth-child(10) {border-radius: 0 0 1rem 1rem;}
+
+.menu1__link:hover {
+  filter: brightness(2);
+  color: var(--c-3);
+}
+
 /*
 ┌────────────────────────────────────────────────────┐
 !                      Header                        │
@@ -206,7 +253,6 @@ button:hover {
 
 .header .int:nth-child(1) {
   left: 50%;
-  /* background-image: var(--gradient-1-inv); */
   background-color: var(--c-6);
   transform: translate(-50%, 0);
   width: 80%;
@@ -311,6 +357,23 @@ button:hover {
 .left {
   background-image: var(--bg-L);
 }
+
+/*? d[-_-]b M1 */
+
+.left .menu1:nth-child(1) {
+  left: -93%;
+  transition: left 500ms ease-in-out;
+}
+
+.left .menu1:nth-child(1):hover {left: 0;}
+
+.left .menu1:nth-child(2) {
+  right: -93%;
+  transition: right 500ms ease-in-out;
+}
+
+.left .menu1:nth-child(2):hover {right: 0;}
+
 /*
 ┌────────────────────────────────────────────────────┐
 !                       c-1                          │
@@ -361,7 +424,21 @@ button:hover {
   background-image: var(--bg-R);
 }
 
-/** <=<=[ int ]=>=> */
+/*? d[-_-]b M1 */
+
+.right .menu1:nth-child(1) {
+  left: -93%;
+  transition: left 500ms ease-in-out;
+}
+
+.right .menu1:nth-child(1):hover {left: 0;}
+
+.right .menu1:nth-child(2) {
+  right: -93%;
+  transition: right 500ms ease-in-out;
+}
+
+.right .menu1:nth-child(2):hover {right: 0;}
 
 /*
 ┌────────────────────────────────────────────────────┐
