--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,10 @@
 
   --bg-L: url('../img/lem-L.jpg');
   --bg-R: url('../img/lem-R.jpg');
+  --c1-bg: url('../img/lem-5.jpg');
+  --c2-bg: url('../img/lem-6.jpg');
+  --c3-bg: url('../img/lem-7.jpg');
+  --c4-bg: url('../img/lem-8.jpg');
 }
 
 /*? ➞➞➞➞➞ Basic reset ➞➞➞➞➞ */
@@ -300,6 +304,50 @@ button:hover {
   color: var(--c-3);
 }
 
+/*? d[-_-]b M3 */
+
+.menu3 {
+  position: absolute;
+  width: 50%;
+  height: 100%;
+  background-image: var(--gradient-1-50);
+  padding: 0.3rem;
+  border-radius: 1.7rem;
+}
+
+.menu3-cont {
+  width: 100%;
+  height: 100%;
+  background-color: var(--c-7);
+  padding: 0.3rem;
+  border-radius: 1.5rem;
+}
+
+.menu3-links {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: var(--c-1);
+  padding: 0.3rem;
+  border-radius: 1.3rem;
+}
+
+.menu3__link {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-grow: 1;
+  border: 1px solid var(--c-7);
+}
+
+.menu3__link:nth-child(1) {border-radius: 1rem 1rem 0 0;}
+.menu3__link:nth-child(5) {border-radius: 0 0 1rem 1rem;}
+
+.menu3__link:hover {
+  animation: hue 3s linear normal;
+}
+
 /*
 ┌────────────────────────────────────────────────────┐
 !                      Header                        │
@@ -481,6 +529,18 @@ button:hover {
   bottom: 70%;
 }
 
+.header .int:nth-child(19) {
+  width: 20%;
+  height: 350%;
+  background-color: var(--c-3);
+  left: 50%;
+  transform: translate(-50%, 0);
+  border-radius: 50%;
+  top: 85%;
+  animation: hue 10s linear infinite;
+  border: 0;
+}
+
 /*
 ┌────────────────────────────────────────────────────┐
 !                       Left                         │
@@ -507,7 +567,7 @@ button:hover {
 
 .left .menu1:nth-child(2):hover {right: 0;}
 
-/*? d[-_-]b M1 */
+/*? d[-_-]b M2 */
 
 .left .menu2:nth-child(3) {
   top: -45%;
@@ -530,8 +590,24 @@ button:hover {
 */
 
 .c-1 {
-  background-image: var(--gradient-1-inv);
+  background-image: var(--c1-bg);
 }
+
+/*? d[-_-]b M3 */
+
+.c-1 .menu3:nth-child(1) {
+  left: -45%;
+  transition: 500ms ease-in-out;
+}
+
+.c-1 .menu3:nth-child(1):hover {left: 0%;}
+
+.c-1 .menu3:nth-child(2) {
+  right: -45%;
+  transition: right 500ms ease-in-out;
+}
+
+.c-1 .menu3:nth-child(2):hover {right: 0;}
 
 /*
 ┌────────────────────────────────────────────────────┐
@@ -540,8 +616,24 @@ button:hover {
 */
 
 .c-2 {
-  background-image: var(--gradient-1-inv);
+  background-image: var(--c2-bg);
 }
+
+/*? d[-_-]b M3 */
+
+.c-2 .menu3:nth-child(1) {
+  left: -45%;
+  transition: 500ms ease-in-out;
+}
+
+.c-2 .menu3:nth-child(1):hover {left: 0%;}
+
+.c-2 .menu3:nth-child(2) {
+  right: -45%;
+  transition: right 500ms ease-in-out;
+}
+
+.c-2 .menu3:nth-child(2):hover {right: 0;}
 
 /*
 ┌────────────────────────────────────────────────────┐
@@ -550,8 +642,24 @@ button:hover {
 */
 
 .c-3 {
-  background-image: var(--gradient-1);
+  background-image: var(--c3-bg);
 }
+
+/*? d[-_-]b M3 */
+
+.c-3 .menu3:nth-child(1) {
+  left: -45%;
+  transition: 500ms ease-in-out;
+}
+
+.c-3 .menu3:nth-child(1):hover {left: 0%;}
+
+.c-3 .menu3:nth-child(2) {
+  right: -45%;
+  transition: right 500ms ease-in-out;
+}
+
+.c-3 .menu3:nth-child(2):hover {right: 0;}
 
 /*
 ┌────────────────────────────────────────────────────┐
@@ -560,8 +668,24 @@ button:hover {
 */
 
 .c-4 {
-  background-image: var(--gradient-1);
+  background-image: var(--c4-bg);
 }
+
+/*? d[-_-]b M3 */
+
+.c-4 .menu3:nth-child(1) {
+  left: -45%;
+  transition: 500ms ease-in-out;
+}
+
+.c-4 .menu3:nth-child(1):hover {left: 0%;}
+
+.c-4 .menu3:nth-child(2) {
+  right: -45%;
+  transition: right 500ms ease-in-out;
+}
+
+.c-4 .menu3:nth-child(2):hover {right: 0;}
 
 /*
 ┌────────────────────────────────────────────────────┐
@@ -791,4 +915,16 @@ button:hover {
   right: 17%;
   border-radius: 50%;
   top: 70%;
+}
+
+.footer .int:nth-child(19) {
+  width: 20%;
+  height: 350%;
+  background-color: var(--c-3);
+  left: 50%;
+  transform: translate(-50%, 0);
+  border-radius: 50%;
+  bottom: 85%;
+  animation: hue 10s linear infinite;
+  border: 0;
 }
